# aoi-pcb-v1

./: .gitignore  Docker Command.txt  LICENSE  README.md  config.json  config_loader.py  helper.py  model_trainer_updated.ipynb  pyproject.toml
.github/workflows/: ci.yml
cnn/: CustomMetric.py  custom_loss.py  cutom_loss.py  model_mobilenetv2.py
data_processing/: data_encoder.py  data_generator_new.py
ic_detection/: data_generator.py  model_trainer.ipynb
kerem_ic_detection/: model_trainer.ipynb  paper_data_generator.py
notebooks/: evaluation.ipynb  training.ipynb
old_implementation/: data_generator.py  model_trainer.ipynb
scripts/: evaluate.py  generate_dataset.py  train.py
src/aoi_pcb/: __init__.py  config_loader.py
src/aoi_pcb/data/: __init__.py  encoder.py  generator.py  utils.py
src/aoi_pcb/model/: __init__.py  architecture.py  loss.py  metric.py
tests/: test_config.py  test_data_pipeline.py  test_generator.py  test_loss_and_metric.py  test_model.py
