[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoi-pcb"
version = "0.1.0"
description = "Automated Optical Inspection for PCB IC placement using synthetic data and transfer learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kerem Aras" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "tensorflow==2.18.*",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "pillow>=10.0",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Apple Silicon GPU acceleration
metal = [
    "tensorflow-metal==1.2.*",
]
# Linux / WSL2 CUDA GPU acceleration
cuda = [
    "tensorflow[and-cuda]==2.18.*",
]
notebooks = [
    "matplotlib",
    "jupyterlab",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.urls]
Repository = "https://github.com/keremaras1/aoi-pcb-v1"

[tool.hatch.build.targets.wheel]
packages = ["src/aoi_pcb"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/aoi_pcb --cov-report=term-missing"
